# csound_a_sound_and_music_system

./: .gitignore  0001-produce-noise-to-dac.csd  0002-setting-the-maximum-amplitude.csd  0003-setting-number-of-channels.csd  0004-setting-the-sampling-rate.csd  0005-setting-ksmps-to-100-for-equiv-control-rate-to-441hz.csd  0006-setting-control-rate-to-441hz.csd
02-key-system-concepts/: 0001-minimum.csd  0002-minimum-sound-producing.csd  0003-using-numeric-score.csd  0004-setting-the-sampling-rate.csd  0005-setting-0dbfs-to-1.csd  0006-setting-the-channels-to-2.csd  0007-setting-the-kr-to-441Hz.csd  0008-setting-ksmps-to-64.csd  0009-simple-csound-api-example.cpp  CMakeLists.txt  Makefile
03-fundamentals/: 0001-statements-in-an-instrument.csd  0002-performance-time-and-init-pass-statements.csd  0003-instrument-parameters.csd  0004-using-i-time-variables-with-expressions.csd  0005-using-i-time-variables-with-opcodes.csd  0006-using-p-variables.csd  0007-producing-random-numbers-at-i-time.csd  0008-producing-random-numbers-at-k-rate.csd  0009-a-simple-sound-synthesis-instrument.csd
04-advanced-data-types/: 0401-strings-and-printing-out-to-console.csd
csound_floss_manual/: 01B01_PeriodicAperiodic.csd  01B02_LimitsOfHearing.csd  01B04_Midi_to_frequency.csd
getting_started/: 001.csd  002-show-kontrol-rate-variable-update.csd  003-using-moogladder-as-low-pass-filter.csd  004-print-madsr-envelope-values.csd  005-using-midi-keyboard-as-input.csd  006-mic-input-echo-output-real-time.csd  006-record-output.csd
simple_csound_api_example_in_cpp/: Makefile  main.cpp  (+1 more)
(+34 files in other folders)
